; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_strdup.c_curlx_strdup.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_strdup.c_curlx_strdup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @curlx_strdup(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %31

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @strlen(i8* %10)
  store i64 %11, i64* %4, align 8
  %12 = load i64, i64* %4, align 8
  %13 = icmp uge i64 %12, -1
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  store i8* null, i8** %2, align 8
  br label %31

15:                                               ; preds = %9
  %16 = load i64, i64* %4, align 8
  %17 = add i64 %16, 1
  %18 = mul i64 %17, 1
  %19 = call i8* @malloc(i64 %18)
  store i8* %19, i8** %5, align 8
  %20 = load i8*, i8** %5, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %15
  store i8* null, i8** %2, align 8
  br label %31

23:                                               ; preds = %15
  %24 = load i8*, i8** %5, align 8
  %25 = load i8*, i8** %3, align 8
  %26 = load i64, i64* %4, align 8
  %27 = add i64 %26, 1
  %28 = mul i64 %27, 1
  %29 = call i32 @memcpy(i8* %24, i8* %25, i64 %28)
  %30 = load i8*, i8** %5, align 8
  store i8* %30, i8** %2, align 8
  br label %31

31:                                               ; preds = %23, %22, %14, %8
  %32 = load i8*, i8** %2, align 8
  ret i8* %32
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @malloc(i64) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
